[package]
name = "system_monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap= { version="4.4.11", features = ["derive"] }
sysinfo = { version="0.30.1" }
reqwest = { version = "0.11.23", features = ["blocking"] }